--- a/Assignment__3(d)/grid.css
+++ b/Assignment__3(d)/grid.css
@@ -26,6 +26,9 @@ body{
     grid-column: 1 / 3;
     grid-row: 1/2;
     background-color: hsl(263, 55%, 52%);
+    background-image: url(./images/bg-pattern-quotation.svg);
+    background-position: 80% 0;
+    background-repeat: no-repeat;
 }
 .grid-item-2{
     grid-column: 3/4;
